--- a/composer.json
+++ b/composer.json
@@ -54,12 +54,16 @@
         }
     },
     "config": {
+        
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true
-        }
+        },
+        "audit": {
+        "block-insecure": false
+    }
     },
     "minimum-stability": "stable",
     "prefer-stable": true
